Assignment5/src/objects/Training_Session__c.object
<CustomObject>
    <fields>
        <fullName>Average_of_Rating__c</fullName>
        <description>Gives the average of rating</description>
        <formula>Sum_of_Rating__c /  Count_of_Rating__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average of Rating</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_of_Rating__c</fullName>
        <description>sum of rating from feedback which is the child of training session</description>
        <label>Count of Rating</label>
        <summaryForeignKey>Feedback__c.Training_Session_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>On which location session is going to happen.</description>
        <inlineHelpText>Give the location on which the session is going to happen.</inlineHelpText>
        <label>Location</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mode_of_Session__c</fullName>
        <description>Mode of Sessions</description>
        <label>Mode of Session</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Webinar Online</fullName>
                </value>
                <value>
                    <fullName>Webinar Offline</fullName>
                </value>
                <value>
                    <fullName>Workshop Online</fullName>
                </value>
                <value>
                    <fullName>Workshop Offline</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Attendees__c</fullName>
        <description>Count the total number of attendee from the attendee object</description>
        <label>Number of Attendees</label>
        <summaryForeignKey>Attendee__c.Training_Session_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Sessions__c</fullName>
        <description>How many sessions is going to to happen .</description>
        <inlineHelpText>Give the number of sessions going to happen.</inlineHelpText>
        <label>Number of Sessions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Session_Date__c</fullName>
        <description>On which date session is going to happen .</description>
        <inlineHelpText>Enter the date on which session is going to happen .</inlineHelpText>
        <label>Session Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sum_of_Rating__c</fullName>
        <description>Sum of rating from the feedback</description>
        <label>Sum of Rating</label>
        <summarizedField>Feedback__c.Rating__c</summarizedField>
        <summaryForeignKey>Feedback__c.Training_Session_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Training Session</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Training Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Sessions</pluralLabel>
    <recordTypes>
        <fullName>Webinar</fullName>
        <active>true</active>
        <description>Use this record type for Webinar only.</description>
        <label>Webinar</label>
    </recordTypes>
    <recordTypes>
        <fullName>Workshop</fullName>
        <active>true</active>
        <description>Use this record type for Workshop only.</description>
        <label>Workshop</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>VR_Validate_Date_of_Session</fullName>
        <active>true</active>
        <description>Date of session should be today or in future, it should not be in the past .</description>
        <errorConditionFormula>Session_Date__c  &lt;=  TODAY()</errorConditionFormula>
        <errorMessage>Your date should be of today or be  in future</errorMessage>
    </validationRules>
</CustomObject>